@@ -10,6 +10,7 @@
 - updated `opt.files` by adding downloading files from URL address in the `REQUEST()` method
 - updated `RESTBuilder.file(name, filename, [buffer/url])` method
 - fixed `Object` type without properties in JSON schemas
+- fixed built-in `session` mechanism (a problem with storing sessionid/userid with the dash `-`)
 
 ========================
 0.0.68
